--- a/Lab 3/Deliverable_Properties_Analysis.ipynb
+++ b/Lab 3/Deliverable_Properties_Analysis.ipynb
@@ -3642,7 +3642,8 @@
      "text": [
       "For eps = 0.125 For mpts = 40 Estimated number of clusters: 6 The average silhouette_score is : 0.17 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  82.95 +- 0.19\n",
       "For eps = 0.125 For mpts = 50 Estimated number of clusters: 12 The average silhouette_score is : 0.26 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  83.78 +- 0.3\n",
-      "For eps = 0.125 For mpts = 60 Estimated number of clusters: 11 The average silhouette_score is : 0.26 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.13 +- 0.21\n"
+      "For eps = 0.125 For mpts = 60 Estimated number of clusters: 11 The average silhouette_score is : 0.26 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.13 +- 0.21\n",
+      "For eps = 0.13 For mpts = 40 Estimated number of clusters: 5 The average silhouette_score is : 0.14 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.17 +- 0.23\n"
      ]
     }
    ],
