--- a/Lab 3/Deliverable_Properties_Analysis.ipynb
+++ b/Lab 3/Deliverable_Properties_Analysis.ipynb
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -1921,7 +1921,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clustering Counts for eps of: 10\n"
+      "Clustering Counts for eps of 7\n"
      ]
     },
     {
@@ -1939,7 +1939,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6.84 s\n"
+      "Wall time: 6.95 s\n"
      ]
     }
    ],
@@ -1947,7 +1947,7 @@
     "%%time\n",
     "DBSCAN_model = DBSCAN(eps=7, min_samples=100).fit(tmp)\n",
     "DBSCAN_labels = DBSCAN_model.labels_\n",
-    "print('Clustering Counts for eps of:', eps)\n",
+    "print('Clustering Counts for eps of 7')\n",
     "clus['DBSCAN_cluster'] = DBSCAN_labels\n",
     "display(clus.DBSCAN_cluster.value_counts())"
    ]
@@ -1963,36 +1963,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clustering Counts for eps of: 10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       " 0    3895\n",
-       " 2    2902\n",
-       " 1    1669\n",
-       " 3    1136\n",
-       " 4     315\n",
-       "-1      83\n",
-       "Name: DBSCAN_cluster, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DBSCAN_model = DBSCAN(eps=3, min_samples=100).fit(tmp)\n",
     "DBSCAN_labels = DBSCAN_model.labels_\n",
-    "print('Clustering Counts for eps of:', eps)\n",
+    "print('Clustering Counts for eps of 3')\n",
     "clus['DBSCAN_cluster'] = DBSCAN_labels\n",
     "display(clus.DBSCAN_cluster.value_counts())"
    ]
@@ -3633,7 +3610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3643,7 +3620,13 @@
       "For eps = 0.125 For mpts = 40 Estimated number of clusters: 6 The average silhouette_score is : 0.17 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  82.95 +- 0.19\n",
       "For eps = 0.125 For mpts = 50 Estimated number of clusters: 12 The average silhouette_score is : 0.26 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  83.78 +- 0.3\n",
       "For eps = 0.125 For mpts = 60 Estimated number of clusters: 11 The average silhouette_score is : 0.26 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.13 +- 0.21\n",
-      "For eps = 0.13 For mpts = 40 Estimated number of clusters: 5 The average silhouette_score is : 0.14 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.17 +- 0.23\n"
+      "For eps = 0.13 For mpts = 40 Estimated number of clusters: 5 The average silhouette_score is : 0.14 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.17 +- 0.23\n",
+      "For eps = 0.13 For mpts = 50 Estimated number of clusters: 9 The average silhouette_score is : 0.2 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.24 +- 0.23\n",
+      "For eps = 0.13 For mpts = 60 Estimated number of clusters: 11 The average silhouette_score is : 0.26 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.27 +- 0.25\n",
+      "For eps = 0.14 For mpts = 40 Estimated number of clusters: 3 The average silhouette_score is : 0.27 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.3 +- 0.22\n",
+      "For eps = 0.14 For mpts = 50 Estimated number of clusters: 5 The average silhouette_score is : 0.22 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.37 +- 0.19\n",
+      "For eps = 0.14 For mpts = 60 Estimated number of clusters: 9 The average silhouette_score is : 0.2 Average accuracy (with DBSCAN for LATITUDE/LONGITUDE)=  84.42 +- 0.22\n",
+      "Wall time: 19min 19s\n"
      ]
     }
    ],
