--- a/Lab 3/Deliverable_Properties_Analysis.ipynb
+++ b/Lab 3/Deliverable_Properties_Analysis.ipynb
@@ -1963,9 +1963,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clustering Counts for eps of 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       " 0    3895\n",
+       " 2    2902\n",
+       " 1    1669\n",
+       " 3    1136\n",
+       " 4     315\n",
+       "-1      83\n",
+       "Name: DBSCAN_cluster, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "DBSCAN_model = DBSCAN(eps=3, min_samples=100).fit(tmp)\n",
     "DBSCAN_labels = DBSCAN_model.labels_\n",
@@ -2405,7 +2428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From above we were able to determine the appropriate number of clusters for our data is 3. This was judged by assessing the silhoette scores for each of the clusters. In order to better asses these clusters we looked at the silhouette scores between clusters as well as a plot of the clusters based on there first 2 principle components. Those 2 only explain ~33% of the variability in the data but hopefully these should give us an idea of how well the component seperated."
+    "From above we were able to determine, the appropriate number of clusters for BATHRM, BEDRM, ROOMS, AYB, GBA, STRUCT, LATITUDE, LONGITUDE is 3 using AgglomerativeClustering. This was judged by assessing the silhoette scores for each of the clusters. In order to better asses these clusters we looked at the silhouette scores between clusters as well as a plot of the clusters based on there first 2 principle components. Those 2 only explain ~33% of the variability in the data but hopefully these should give us an idea of how well the component seperated."
    ]
   },
   {
